[package]
name = "awita"
version = "0.2.2"
edition = "2021"
keywords = ["windows"]
categories = ["gui"]
description = "An asynchronous window library in Rust for Windows"
license = "MIT"
readme = "README.md"
repository = "https://github.com/LNSEAB/awita"
documentation = "https://docs.rs/awita"

[dependencies]
thiserror = "1.0.30"
gecl = "0.0.2"
num = "0.4.0"
tokio = { version = "1.13.1", features = ["rt", "sync"] }
once_cell = "1.8.0"
serde = { version = "1.0.130", optional = true, features = ["derive"] }
async-broadcast = "0.3.4"

[dependencies.windows]
version = "0.27.0"
features = [
	"alloc",
	"Win32_UI_WindowsAndMessaging",
	"Win32_UI_Input_Ime",
	"Win32_UI_Input_KeyboardAndMouse",
	"Win32_UI_Shell",
	"Win32_UI_HiDpi",
	"Win32_UI_Controls",
	"Win32_System_LibraryLoader",
	"Win32_System_Threading",
	"Win32_System_Diagnostics_Debug",
	"Win32_System_SystemServices",
	"Win32_Globalization",
	"Win32_Graphics_Gdi",
	"Win32_System_Com",
	"Win32_Foundation",
]

[dev-dependencies]
anyhow = "1.0.45"
tokio = { version = "1.13.1", features = ["full"] }

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]
