[package]
name = "awita"
version = "0.0.4"
edition = "2018"
keywords = ["windows"]
categories = ["gui"]
description = "An asynchronous window library in Rust for Windows"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/LNSEAB/awita"
documentation = "https://docs.rs/awita"

[dependencies]
windows = "0.19.0"
awita_windows_bindings = { path = "../bindings", version = "^0.0.3"}
thiserror = "1.0.26"
gecl = "0.0.2"
num = "0.4.0"
tokio = { version = "1.10.0", features = ["rt", "sync"] }
once_cell = "1.8.0"
serde = { version = "1.0.127", optional = true, features = ["derive"] }
async-broadcast = "0.3.3"

[dev-dependencies]
anyhow = "1.0.43"
tokio = { version = "1.10.0", features = ["full"] }

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]
